test_files/netlist_connected/invalid/invalid_01_line_4.net
V1 N001 0 12
R1 out N001 1k
R2 out 0 1k
R3 N002 0 1k
.tf V(out) V1
.backanno
.end
